corrigiendo instalacion de materialize

--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<title>Té como señora</title>
-	<link rel="stylesheet" href="css/main.css">
-	<!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+	<link rel="stylesheet" href="css/style.css">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="vendors/materialize/css/materialize.min.css" media="screen,projection" />
 </head>
 <body>
-
-	<header>
-		<h1>Tetería Té como Señora</h1>
-	</header>
-	<section id="formulario">
+<h1>Té como señora</h1>
+<section id="formulario">
 	<div class="card-panel  yellow darken-4">
     <span class="orange accent-1">
 		<p>Bienvenid@s a la Tetería Té como Señora. Ofrecemos los mejores tés del mercado a bajos precios, gracias a nuestro sistema de venta online y cajas del mes.</p>
@@ -46,13 +43,9 @@
 	<section id="productos">
 		<!-- Acá puedes crear lo que quieras-->
 	</section>
-	<script src="js/main.js">
-		 $(document).ready(function() {
-    $('select').material_select();
-  });
-	</script>
 
-	<!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="vendors/materialize/js/materialize.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
