agregra funcion mostrar data

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 		<p>Bienvenid@s a la Tetería Té como Señora. Ofrecemos los mejores tés del mercado a bajos precios, gracias a nuestro sistema de venta online y cajas del mes.</p>
 		<p>Si deseas suscribirte a nuestra caja de té mensual, rellena tus datos en el formulario</p></div></span>
    			<form action="">
-			<label for="Nombre"> Nombre:</label>
-			<input type="text">
-			<label for="apellido"> Apellido:</label>
-			<input type="text">
+			<label for="Nombre" required> Nombre:</label>
+			<input id="Nombre" type="text">
+			<label for="Apellido"> Apellido:</label>
+			<input id= "Apellido" type="text">
 			<label for="Email"> Correo Electrónico:</label> 
-			<input type="email">
+			<input id="Email" type="email">
 			<label for="Dirección">Dirección: </label>
-			<input type="text">
+			<input id="Direccion" type="text">
 			<label for="Teléfono">Teléfono:</label>
-			<input type="text">
+			<input id="Telefono" type="text">
 			<label for="">Selecciona un pack:</label>
 			<select name="" id="">
 				<option value="">Escoje tu opción</option>
 				<option value="">Pack de té clásico (Té negro)</option>
-				<option value="">Pack frutales (Hierbas y té con aromatizado con fruta</option>
+				<option value="">Pack frutales (Hierbas y té con aromatizado con fruta)</option>
 				<option value="">Pack variedades (Té verde, rojo y blanco)</option>
 			</select>
 			<label for=""></label>
@@ -38,7 +38,7 @@
 		</form>
 	</section>
 	<section id="clientes">
-		<!-- Acá van los datos de ingresados por los clientes -->
+		
 	</section>
 	<section id="productos">
 		<!-- Acá puedes crear lo que quieras-->
