--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Té como señora</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Droid+Sans" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
 </head>
